--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <script src="https://kit.fontawesome.com/8e11e46df3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
     <div class="container">
         <div class="icon">
-            <ul class="icons">
-                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-instagram-square"></i></a></li>
-            </ul>
+            <div class="icons">
+                <a id="facebook" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a id="twitter" href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a id="insta" href="#"><i class="fa-brands fa-instagram-square"></i></a>
+            <div class="background"></div>
+            </div>
         </div>
-        <div class="background"></div>
     </div>
 </body>
 </html>
